--- a/src/App.css
+++ b/src/App.css
@@ -84,11 +84,12 @@ body {
 }
 
 .recovered-left{
-  border-left: 4px solid #f39c12;
+  border-left: 4px solid #27ae60;
+  
 }
 
 .confirmed-left{
-  border-left: 4px solid #27ae60;
+  border-left: 4px solid #f39c12;
 }
 
 .deaths-left{
@@ -202,6 +203,12 @@ img {
   overflow: scroll;
   height: 60vh;
   width: 100%;
+}
+
+.country-list-heading{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .leaflet-container {
