--- a/src/App.css
+++ b/src/App.css
@@ -465,6 +465,7 @@ label {
   /* color: var(--primary-color); */
   padding: 0.40rem;
   margin: 0 0.25rem;
+  cursor: pointer;
 }
 .active-pagination{
   background-color: #34495e;
