--- a/client/src/App.css
+++ b/client/src/App.css
@@ -458,6 +458,7 @@ label {
 
 .pagination ul{
   display: flex;
+  flex-wrap: wrap;
 }
 
 .pagination div{
@@ -659,6 +660,10 @@ input:checked[type="checkbox"]:before{
     width: 120px;
   }
 
+  .top5{
+    display: none !important;
+  }
+
 .filter-buttons{
   flex-wrap: wrap;
 }
@@ -752,6 +757,21 @@ input:checked[type="checkbox"]:before{
 .legend i {
   width: 18px;
   height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
+
+.top5 {
+  display: flex;
+  width: 250px;
+  flex-direction: column;
+  height:150px;
+  line-height: 10px;
+  color: #555;
+}
+
+.top5 i {
   float: left;
   margin-right: 8px;
   opacity: 0.7;
