--- a/client/src/App.css
+++ b/client/src/App.css
@@ -180,12 +180,21 @@ img {
 .world-map-container  {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #34495e;
+  height: 580px;
   max-width: 1250px;
   margin: auto;
   overflow: hidden;
   padding: 0 2rem;
   margin-top: 6rem;
   margin-bottom: 3rem;
+}
+
+.sanitiser{
+   background-color: #34495e;
+   height: 500px;
 }
 
 .country-list{
@@ -213,7 +222,7 @@ img {
 
 .leaflet-container {
   width: 100%;
-  height: 80vh;
+  height: 75vh;
   z-index: 0;
 }
 
