--- a/client/src/App.css
+++ b/client/src/App.css
@@ -852,7 +852,7 @@ input:checked[type="checkbox"]:before{
 }
 
 .box{
-  background-color: var(--secondary-color);
+  background-color: #2c3e50;
   height: 50px;
   width: 50px;
   border-radius: 50%;
@@ -889,9 +889,9 @@ input:checked[type="checkbox"]:before{
 }
 
 button {
-    color: black;
-    background-color: #cff;
-    border: 1px solid #cff;
+    color: #fff;
+    background-color: #2c3e50 ;
+    border: 1px solid #fff;
     border-radius: 4px;
     padding: 0 15px;
     cursor: pointer;
@@ -900,6 +900,7 @@ button {
     transition: all 0.2s ease-in-out;
     opacity: 0.8;
     margin-bottom: 8px;
+    
   }
   button:hover {
     opacity: 1;
