--- a/client/src/App.css
+++ b/client/src/App.css
@@ -187,7 +187,7 @@ img {
   max-width: 1250px;
   margin: auto;
   overflow: hidden;
-  padding: 0 2rem;
+  padding: 20px;
   margin-top: 6rem;
   margin-bottom: 3rem;
 }
