--- a/client/src/App.css
+++ b/client/src/App.css
@@ -236,9 +236,53 @@ img {
   to {opacity: 1;}
 }
 
+
+.leaflet-popup-content-wrapper {
+  background: linear-gradient(#000, #111);
+  border: groove 1px #fff;
+  overflow: hidden;
+  top: 100%;
+  left: 50%; 
+  transform: translate(-50%, -100%);
+  -webkit-transform: translate(-50%, -100%); 
+  position: absolute;
+  animation: fadeInPopup 1s ease-out;
+  }
+
+   @keyframes fadeInPopup {
+      0% {
+        opacity: 0;
+        height: 0;
+        width: 0;
+      }
+      50% {
+        opacity: 1;
+        height: 0;
+        width: 310px;
+      }
+
+      100% {
+        opacity: 1;
+        /* height: 100px; */
+        width: 310px;
+      }
+    }
+
+.leaflet-popup-close-button{
+  display: none;
+}
 /* .leaflet-control-layers-base{
   z-index: 100 !important;
 } */
+
+.leaflet-popup-content {
+  width: 300px;
+  /* height: 100px; */
+  text-align: center;
+  padding: 0;
+  margin: 0 0 0 10px;
+  overflow: hidden;
+}
 
 
 .stats-container{
@@ -730,6 +774,20 @@ input:checked[type="checkbox"]:before{
 
   .navbar .welcome {
     display: none;
+  }
+
+  .world-map-container{
+    padding: 0px;
+    height: 80vh;
+    /* padding: 0px; 
+    height: 85vh; */
+    /* padding: 0px; 
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0; */
+    /* height: 100%; */
   }
 }
 
