--- a/client/src/App.css
+++ b/client/src/App.css
@@ -172,7 +172,7 @@ img {
 }
 
 /* Utilities */
-.container, .timeseries-container{
+.container{
   max-width: 1250px;
   margin: auto;
   overflow: hidden;
@@ -194,6 +194,22 @@ img {
   padding: 20px;
   margin-top: 6rem;
   margin-bottom: 3rem;
+}
+
+.timeseries-container  {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #34495e;
+  /* height: 580px; */
+  /* padding: 40px; */
+  padding-right: 20px;
+  left: 0px;
+  max-width: 1250px;
+  margin: auto;
+  overflow: hidden;
+  border-radius: 8px;
 }
 
 .sanitiser{
@@ -315,6 +331,10 @@ img {
   margin: 10px 20px;
   justify-content: center;
   border-radius: 8px;
+}
+
+.toggle{
+  width: 300px;
 }
 
 /* Text Styles*/
