--- a/client/src/App.css
+++ b/client/src/App.css
@@ -71,6 +71,12 @@ body {
   }
 }
 
+.pulse-center{
+  background-color: var(--secondary-color);
+  margin-top: 2rem;
+  margin: 0 auto;
+}
+
 .confirmed{
   color: #f39c12
 }
@@ -708,10 +714,11 @@ input:checked[type="checkbox"]:before{
 .filter-buttons, .dash-buttons{
   display: flex;
   margin-top: 8px;
+  justify-content:space-between;
 }
 
 .activeFilter{
-  background-color: black;
+  background-color: #2c3e50;
   color: #fff;
   transition: 1s;
 }
@@ -750,11 +757,18 @@ input:checked[type="checkbox"]:before{
   }
 
   .btn{
-    width: 120px;
+    width: 80px; 
+    padding: 0.2rem 0.2rem;
+    font-size: 0.8rem;
+    margin-right: 0.2rem;
   }
 
 .filter-buttons{
   flex-wrap: wrap;
+}
+
+.top5 {
+  font-size: 0.6rem !important;
 }
 
   .alert {
@@ -874,10 +888,6 @@ input:checked[type="checkbox"]:before{
   /* width: 200px; */
   line-height: 10px;
   color: #555;
-}
-
-.top5 div{
-  margin-top: 5px;
 }
 
 .top5-row{
@@ -1063,4 +1073,8 @@ button {
 
 @keyframes slide-closed{
     100%{ left: -100%}
+}
+
+.compare-display{
+  text-align: center;
 }
