--- a/client/src/App.css
+++ b/client/src/App.css
@@ -128,13 +128,21 @@ body {
 }
 
 .dropdown-list{
-/* position: absolute; */
-/* z-index: 200; */
-  height: "200px"
+  position: absolute;
+  z-index: 1000;
+  height: 300px;
+  width: 300px;
+  overflow-y: scroll;
+  background-color: #2c3e50;
+  opacity: 0.95;
 }
 
 .dropdown-list ul {
   list-style-type: none;
+}
+
+.dropdown-list li:hover{
+  background-color: #34495e;
 }
 
 .dropdown-list li{
